--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,6 +65,12 @@
     <string name="tab_title_news">News</string>
     <string name="label_desc">Description</string>
     <string name="label_email">Email</string>
+    <string name="notifications_settings">Notifications</string>
+    <string name="notifications_general_title">General</string>
+    <string name="notifications_show_title">Show notifications</string>
+    <string name="notifications_tone_title">Notification tone</string>
+    <string name="notifications_vibrate_title">Vibrate</string>
+    <string name="notifications_light_title">Notification light</string>
 
     <string-array name="pref_sync_frequency_entries">
         <item>1 hour</item>
