--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,10 +51,10 @@
 
     <!-- Strings related to log in -->
 
-    <string name="id_number">ID Number</string>
+    <string name="username">Username</string>
     <string name="password">Password</string>
-    <string name="sign_in">Sign In</string>
-    <string name="forgot_password">Can\'t log in?</string>
+    <string name="sign_in">Log in</string>
+    <string name="forgot_password">Need help?</string>
 
     <!-- Strings related to Settings -->
 
